myteo/test/parser/ast/record/non_scoped_id_before_brace1.myte
module test

fun main() {
  1 { field = 1 };
}